--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ body{
     line-height: 1.5;
     color: #434455;
     letter-spacing: 0.02em;
+    font-style: normal;
 }
 .header-contacts-item:hover{
     color:#404bbf
@@ -74,7 +75,7 @@ body{
 
 .hero-button {
     font-family: "Roboto", sans-serif;
-    background-color: #4D5AE5
+    background-color:#4D5AE5;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -90,6 +91,7 @@ body{
 }
 
 .feature-item-title {
+    color:#2e2f42;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -102,8 +104,11 @@ body{
     letter-spacing: 0.02em;
     color: #434455;
 }
-
+.referal-menu-list{
+    background-color: #FFFFFF;
+}
 .referral-title {
+    color:#2e2f42;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
@@ -116,6 +121,7 @@ body{
     background-color: #F4F4FD
 }
 .team-title {
+    color:#2E2F42;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
