--- a/css/styles.css
+++ b/css/styles.css
@@ -61,10 +61,10 @@ body{
     letter-spacing: 0.02em;
 }
 .header-contacts-item:hover{
-    color: var(--contact-focus-color);
+    color: var(--secondary-blu-color);
 }
 .header-contacts-item:focus{
-    color: var(--contact-focus-color);
+    color: var(--secondary-blu-color);
 }
 .hero{
     background-color: var(--primary-dark-color);
